--- a/pom.xml
+++ b/pom.xml
@@ -23,5 +23,10 @@
 			<artifactId>ews-java-api</artifactId>
 			<version>2.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20180130</version>
+		</dependency>
 	</dependencies>
 </project>
